--- a/RobotsVsDinosaurs/RobotsVsDinosaurs.csproj
+++ b/RobotsVsDinosaurs/RobotsVsDinosaurs.csproj
@@ -43,8 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="BattleField.cs" />
+    <Compile Include="Dinosaur.cs" />
+    <Compile Include="Fleet.cs" />
+    <Compile Include="Herd.cs" />
+    <Compile Include="..\Program.cs">
+      <Link>Program.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Robot.cs" />
+    <Compile Include="Weapon.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
